working example, small bug with general collapse/expand buttons

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,7 +31,6 @@ h1 {
 }
 
 p {
-  margin: 0;
   color: var(--gray-700);
 }
 
